# tweakio-sdk

./: .gitignore  ChatLoader.py  Custom_logger.py  Extra.py  MessageProcessor.py  README.md  Reply.py  _Humanize.py  _Media.py  login.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sql_lite_storage.py  test_profile_manager.py  unread_handler.py
RepositoryPattern/Decorators/: Chat_Click_decorator.py
RepositoryPattern/Interfaces/: Chat_Interface.py  Chat_processor_Interface.py  Message_Interface.py  Message_Processor_Interface.py
RepositoryPattern/WhatsApp/: Chat_Processor.py
RepositoryPattern/WhatsApp/DefinedClasses/: Chat.py  Message.py
src/: MessageFilter.py  directory.py
src/BrowserManager/: profile_info.py  profile_manager.py
src/Decorators/: Chat_Click_decorator.py
src/Interfaces/: Chat_Interface.py  Chat_processor_Interface.py  Humanize_Operation_Interface.py  Message_Interface.py  Message_Processor_Interface.py  Reply_Capabale_Interface.py  Storage_Interface.py
src/StorageDB/: models.py  sqlalchemy_storage.py
src/WhatsApp/: Chat_Processor.py  Humanized_Opeartions.py  Message_Processor.py  Reply.py
src/WhatsApp/DefinedClasses/: Chat.py  Message.py
tests/unit/Exceptions/: test_tweakio_exceptions.py
tests/unit/WhatsApp/: test_Chat_Processor.py
